--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:Wxd1KJkOlXqTA2QXdJHfNpvAWq5/lcl52CJZiuq/COE=
 APP_DEBUG=true
-APP_URL=http://alwaispaintingpro.com
+APP_URL=http://alwaispaintingpro.test
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
